1.0.1/README.md
# AI 翻译助手 — AI Translate

> 基于 AI 的智能浏览器翻译插件，支持多种翻译风格、单词本，兼容 Chrome / Edge。

![version](https://img.shields.io/badge/version-1.0.1-blue)
![Manifest](https://img.shields.io/badge/Manifest-V3-green)

---

## 功能

### 核心翻译
- **划词翻译**：选中任意文本，自动弹出翻译图标
- **弹窗面板**：点击浏览器工具栏图标，输入或粘贴文本翻译
- **右键菜单**：选中文本 → 右键 → "翻译选中文本"
- **快捷键**：`Alt+T` 快速翻译当前选中的文本
- **Ctrl+Enter**：弹窗面板中按 `Ctrl+Enter` 快速翻译

### 翻译风格
内置 6 种翻译风格预设，满足不同场景需求：

| 风格 | 适用场景 |
|------|---------|
| 标准 | 日常通用翻译，平衡准确与自然 |
| 正式商务 | 商务邮件、合同、正式文档 |
| 口语自然 | 聊天消息、社交媒体、口语化表达 |
| 学术论文 | 论文、研究报告、学术文献 |
| 诗歌文艺 | 文学、诗歌、创意写作 |
| 技术文档 | API 文档、技术手册、代码注释 |

也支持自定义翻译提示词，使用 `{targetLang}` 变量代表目标语言。

### 单词本
- **收藏**：翻译结果旁点击书签图标，一键收藏
- **浏览**：选项页单词本标签页查看所有收藏
- **搜索**：按单词或翻译内容搜索
- **导出**：导出为 JSON 文件
- **清空**：一键清空所有收藏

### 多语言支持
支持 20 种目标语言：简体中文、繁体中文、英语、日语、韩语、法语、德语、西班牙语、葡萄牙语、俄语、阿拉伯语、印地语、泰语、越南语、意大利语、荷兰语、波兰语、土耳其语、印尼语、马来语

### 外观自定义
- **主题**：跟随系统 / 浅色 / 深色
- **字体大小**：弹窗文字大小可调节 (10px–24px)

---

## 安装

### 从源码加载（开发者模式）

1. 下载或克隆本仓库
2. 打开 Edge 浏览器，访问 `edge://extensions/`
3. 开启 **开发人员模式**
4. 点击 **加载解压缩的扩展**
5. 选择 `1.0.1` 文件夹

### 配置

1. 点击工具栏插件图标 → 齿轮图标 → 进入设置页
2. **连接设置**：
   - 选择 AI 服务商（OpenCode / DeepSeek / OpenAI / Moonshot / Ollama / LM Studio）
   - 输入 API 地址和密钥
   - 点击 **测试连接** 验证
3. **外观设置**：选择主题和字体大小
4. **翻译风格**：选择预设风格或自定义提示词
5. **单词本**：管理收藏的单词

---

## 支持的服务商

| 服务商 | 默认 API 地址 | 备注 |
|--------|--------------|------|
| OpenCode | `https://opencode.ai/zen/v1/chat/completions` | 推荐，默认 |
| DeepSeek | `https://api.deepseek.com/v1/chat/completions` | 深度求索 |
| OpenAI | `https://api.openai.com/v1/chat/completions` | |
| Moonshot | `https://api.moonshot.cn/v1/chat/completions` | 月之暗面 |
| Ollama | `http://localhost:11434/v1/chat/completions` | 本地部署 |
| LM Studio | `http://localhost:1234/v1/chat/completions` | 本地部署 |

也支持任何兼容 OpenAI API 格式的自定义服务商。

---

## 隐私说明

- API 密钥仅存储在浏览器本地 `chrome.storage.sync` 中，不会上传到其他服务器
- 翻译文本通过你配置的 AI 服务商 API 直接发送，不经过第三方中转
- 单词本数据存储在浏览器本地 `chrome.storage.local` 中
- 插件不收集任何使用数据或个人信息

---

## 开发

### 项目结构

```
1.0.1/
├── manifest.json        # 插件配置
├── background.js        # 后台服务 (Service Worker)
├── content.js           # 内容脚本 (划词弹窗)
├── content.css          # 内容脚本样式
├── popup.html           # 弹窗面板
├── popup.js             # 弹窗面板逻辑
├── popup.css            # 弹窗面板样式
├── options.html         # 设置页面
├── options.js           # 设置页面逻辑
├── options.css          # 设置页面样式
├── icons/               # 图标
├── _locales/            # 国际化
│   ├── zh_CN/           # 中文
│   └── en/              # 英文
└── tests/               # 测试
    ├── e2e.spec.js      # E2E 测试
    └── options_e2e.spec.js  # 选项页 E2E 测试
```

### 运行测试

```bash
cd 1.0.1
npm install --save-dev @playwright/test
npx playwright install msedge
npx playwright test --config=tests/playwright.config.js --headed
```

---

## 版本历史

| 版本 | 日期 | 说明 |
|------|------|------|
| 1.0.0 | - | 初始版本：基础划词翻译、弹窗面板、右键菜单 |
| 1.0.1 | 2026-07 | 新增翻译风格预设、单词本、深色模式、完整 i18n |

---

## License

MIT
